<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="makeupItem"
            type="com.melfouly.makeupshop.model.MakeupItem" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_light"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".makeupdetails.MakeupDetailsFragment">

                <TextView
                    android:id="@+id/category_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/category_label"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/item_category"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/item_category"
                    loadCategory="@{makeupItem}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/category_label"
                    app:layout_constraintTop_toTopOf="@id/category_label"
                    tools:text="Bronzer" />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@{makeupItem.name.trim()}"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/category_label"
                    tools:text="Item name" />

                <ImageView
                    android:id="@+id/item_image"
                    loadImage="@{makeupItem}"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white"
                    android:contentDescription="@{makeupItem.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_name"
                    tools:src="@drawable/no_image_found" />

                <TextView
                    android:id="@+id/item_price"
                    style="@style/label_style"
                    loadPrice="@{makeupItem}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/brand_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_image"
                    tools:text="Price: 5$" />

                <TextView
                    android:id="@+id/brand_label"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand_label"
                    app:layout_constraintEnd_toStartOf="@id/item_brand"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/item_price" />

                <TextView
                    android:id="@+id/item_brand"
                    loadBrand="@{makeupItem}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/brand_label"
                    app:layout_constraintTop_toTopOf="@id/brand_label"
                    tools:text="Dior" />

                <TextView
                    android:id="@+id/texture_label"
                    style="@style/label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texture_label"
                    app:layout_constraintEnd_toStartOf="@id/item_texture"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/brand_label" />

                <TextView
                    android:id="@+id/item_texture"
                    loadTexture="@{makeupItem}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/aclonica"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/texture_label"
                    app:layout_constraintTop_toTopOf="@id/texture_label"
                    tools:text="Powder" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_to_cart_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/pink"
                    android:contentDescription="@string/add_to_cart_content_description"
                    android:text="@string/add_to_cart"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_add_shopping_cart_24"
                    app:iconGravity="textStart"
                    app:layout_constraintBottom_toTopOf="@id/original_link_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/texture_label" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/original_link_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/open_link_content_description"
                    android:text="@string/open_original_link"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:icon="@drawable/ic_baseline_open_in_new_24"
                    app:iconGravity="textStart"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toTopOf="@id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_to_cart_button" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="?attr/dividerHorizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/original_link_button" />

                <TextView
                    android:id="@+id/about_the_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/about_the_product"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider" />

                <TextView
                    android:id="@+id/item_description"
                    loadDescription="@{makeupItem}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/about_the_product"
                    tools:text="XXXXXXXX" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/cart_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/pink"
            android:contentDescription="@string/open_cart_content_description"
            android:textColor="@color/black"
            app:icon="@drawable/ic_baseline_shopping_cart_24"
            app:iconTint="@color/black" />
    </FrameLayout>
</layout>